# olmoearth2

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: olmoearth_base.py  olmoearth_nano.py  olmoearth_nano_eval.py  v1_lib.py
olmoearth2/: _compat.py  config.py  datatypes.py  model_loader.py
olmoearth2/data/: collate.py  concat.py  constants.py  corpus_v2.py  dataloader.py  dataset.py  normalize.py  reader.py  transform.py  visualize.py
olmoearth2/data/h5/: convert_to_h5py.py  parse.py  sample.py  utils.py
olmoearth2/data/norm_configs/: computed.json  predefined.json
olmoearth2/dataset_construction/: Dockerfile  internal_docs.md  make_meta_summary.py  util.py
olmoearth2/dataset_construction/create_windows/: util.py
olmoearth2/dataset_construction/openstreetmap/: osm_sampling.go
olmoearth2/dataset_construction/rslearn_to_olmoearth/: cdl.py  era5.py  era5_10.py  eurocrops.py  gse.py  landsat.py  multitemporal_raster.py  naip.py  naip_10.py  openstreetmap.py  rasterize_openstreetmap.py  sentinel1.py  sentinel2.py  sentinel2_l2a.py  srtm.py  worldcereal.py  worldcover.py  worldpop.py  wri_canopy_height_map.py
olmoearth2/dataset_construction/scripts/: create_subset.py
olmoearth2/dataset_construction/sentinel2_l1c/: launch_jobs.py
olmoearth2/dataset_construction/wri_canopy_height_map/: download_wri_canopy_height_map.py
olmoearth2/eval/: constants.py  embedding_diagnostics.py  embedding_transforms.py  embeddings.py  eval_wrapper.py  knn.py  linear_probe.py  metrics.py  sweep.py  task_types.py
olmoearth2/eval/datasets/: __init__.py  breizhcrops.py  configs.py  constants.py  floods_dataset.py  geobench_dataset.py  mados_dataset.py  normalize.py  pastis_dataset.py  pastis_processor.py  paths.py  pretrain_subset.py  rslearn_builder.py  rslearn_dataset.py  utils.py
olmoearth2/eval/finetune/: __init__.py  checkpoint.py  constants.py  evaluate.py  model.py  train.py
olmoearth2/eval/models/: __init__.py
olmoearth2/eval/studio_ingest/: README.md  __init__.py  band_stats.py  cli.py  ingest.py  registry.json  registry.py  schema.py
olmoearth2/inference/: __init__.py  model_loader.py
olmoearth2/launch/: __init__.py  all_evals.py  beaker.py  checkpoint_sweep_evals.py  common.py  compute_h5_norm.py  constants.py  experiment.py  full_eval_sweep.py  full_eval_sweep_finetune.py  override_examples.md  run_h5_conversion.py  utils.py
olmoearth2/model/: attention.py  encodings.py  flexi_patch_embed.py  flexi_vit.py  flexihelios.py  galileo.py  latent_mim.py  mae.py  pooled_modality_predictor.py  pooling.py  st_model.py  tokenization.py  utils.py
olmoearth2/tools/: constants.py  convert_checkpoint.py  data_models.py  run_throughput_benchmark.py
olmoearth2/train/: __init__.py  loss.py  masking.py  utils.py
olmoearth2/train/callbacks/: __init__.py  evaluator_callback.py  speed_monitor.py  wandb.py
olmoearth2/train/train_module/: galileo.py  (+4 more)
tests/: conftest.py  test_data.py  test_loss_parity.py  test_masking.py  test_model_parity.py  test_objective.py  test_registry_smoke.py  test_smoke.py
(+24 files in other folders)
