[project]
name = "olmoearth2"
version = "0.1.0"
description = "OlmoEarth 2 — earth system foundation model pretraining, eval, and inference"
authors = [
    { name = "OlmoEarth Team" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11, <3.14"
dependencies = [
    # Minimal inference dependencies (SDPA path, no flash-attn)
    "einops>=0.7.0",
    "huggingface_hub",
    "numpy>=1.26.4",
    "torch>=2.7,<2.8",
    "universal-pathlib>=0.2.5",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["olmoearth2*"]

[tool.setuptools.package-data]
"olmoearth2" = ["py.typed"]
"olmoearth2.data.norm_configs" = ["*.json"]
"olmoearth2.eval.datasets.config" = ["*.json"]
"olmoearth2.eval.studio_ingest" = ["registry.json"]

[project.optional-dependencies]
training = [
    "ai2-olmo-core==2.3.0",
    "albumentations>=1.4.10",
    "cartopy>=0.25.0",
    "class-registry>=2.1.2",
    # class-registry imports pkg_resources at import time but doesn't declare it;
    # fresh uv venvs don't ship setuptools, so pin it explicitly.
    "setuptools>=70",
    "gcsfs>=2025.9.0",
    "hdf5plugin>=6.0.0",
    "matplotlib>=3.10.7",
    "pandas>=2.2",
    "psutil>=7.1.1",
    "rasterio>=1.4.3",
    "shapely>=2",
    "torchvision>=0.22.1",
    "universal-pathlib>=0.2.5",
    "wandb>=0.19.0",
]
flash-attn = [
    "flash-attn>=2.4.0",
]
beaker = [
    "beaker-py==1.34.1",
    "docker>=5.0,<8.0",
    "packaging>=24.2",
    "pydantic>=1.8.2,<3.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=12.3,<14.0",
    "google-cloud-compute",
]
data = [
    "class-registry>=2.1.2",
    "gcsfs>=2025.9.0",
    "hdf5plugin>=6.0.0",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "rslearn>=0.1.4",
]
eval = [
    "geobench>=1.0.1",
    "scikit-learn>=1.7.2",
    "torchmetrics==1.7.1",
    "rioxarray>=0.19.0",
    "xarray>=2025.10.1",
    "tqdm>=4.66.0",
]
dev = [
    "pip>=25.2",
    "gitpython>=3.0,<4.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.1",
    "mypy>=1.11",
]

[tool.uv.sources]
geobench = { git = "https://github.com/ServiceNow/geo-bench.git" }
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
